--- a/about.css
+++ b/about.css
@@ -2,12 +2,44 @@
 @import url('https://fonts.googleapis.com/css2?family=Gideon+Roman&family=Inter:wght@200&family=Italianno&family=Lilita+One&family=Poppins:wght@500&display=swap');
 
 /* about Section style start*/
-.about-section {
+
+/* first part start */
+.first_slide_section {
     margin-top: 32px;
 
 }
 
-.about-left-headLine {
+
+.first_slide_title {
+    color: #C17575;
+    font-size: 100px;
+    font-weight: bold;
+    position: relative;
+    text-transform: uppercase;
+    width: 1000px;
+    margin: auto;
+}
+
+.first_slide_title:before {
+    content: 'About Us';
+    position: absolute;
+    display: block;
+    top: 2px;
+    left: 250px;
+    color: black;
+    background: -webkit-linear-gradient(-90deg, rgba(26, 53, 53, 0.93), #D4BCBC, #884444, #D4BCBC, #884444, #D4BCBC);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.first_slide_left {
+
+    border: #636363 solid .1px;
+    box-shadow: 0 0 10px 5px;
+    border-top-width: 10;
+}
+
+.first_slide_left_headLine {
     Font-family: 'Inter';
     color: white;
     font-size: 30px;
@@ -20,36 +52,7 @@
     text-transform: uppercase;
 }
 
-.about_us {
-    color: #C17575;
-    font-size: 100px;
-    font-weight: bold;
-    position: relative;
-    text-transform: uppercase;
-    width: 1000px;
-    margin: auto;
-}
-
-.about_us:before {
-    content: 'About Us';
-    position: absolute;
-    display: block;
-    top: 2px;
-    left: 250px;
-    color: black;
-    background: -webkit-linear-gradient(-90deg, rgba(26, 53, 53, 0.93), #D4BCBC, #884444, #D4BCBC, #884444, #D4BCBC);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-.about-left {
-
-    border: #636363 solid .1px;
-    box-shadow: 0 0 10px 5px;
-    border-top-width: 10;
-}
-
-.about-left-paregraph {
+.first_slide_left_parefraph {
     color: #ECE87F;
     padding: 5px;
     font-size: 15px;
@@ -57,11 +60,116 @@
     text-align: justify;
 }
 
-.about_img {
-    width: 500px;
-    height: 590px;
+.first_slide_img {
+    width: 100%;
 }
 
-.a {
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+/* Second part start */
+.second_slide_parent_section {
+    width: 100%;
+    height: 490px;
+    display: flex;
+
+}
+
+.second_slide_left {
+    width: 40%;
+    height: 90%;
+
+}
+
+.second_slide_img {
+    margin-top: 20px;
+}
+
+.second_slide_right {
+
+    margin-left: 200px;
+    border-bottom: 480px solid #043851;
+    border-left: 95px solid transparent;
+    border-right: 1px solid transparent;
+    height: 0;
+    width: 100%;
+    margin-bottom: 60px;
+
+}
+
+.second_slide_left_title {
+    margin-top: 100px;
+    font-size: 75px;
+    font-weight: 400;
+    text-transform: uppercase;
+}
+
+.second_slide_right_paragraph {
+    text-align: justify;
+    color: white;
+    padding: 0 20px;
+}
+
+/* third sild css style start */
+
+
+
+.third_slide_black_div {
+    background-color: black;
+    width: 100%;
+    height: 100px;
+}
+
+.third_slide_title {
+    text-align: right;
+    margin-right: 70px;
+    font-size: 75px;
+    font-weight: 400;
+    text-transform: uppercase;
+
+}
+
+.third_slide_triangle {
+    width: 0;
+    height: 0;
+    margin-left: 20%;
+    border-left: 60px solid transparent;
+    border-right: 60px solid transparent;
+    border-bottom: 120px solid #FFC300;
+    position: absolute;
+    margin-top: -80px;
+}
+
+.third_slide_flex_div {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 300px;
+}
+
+.left_colom {
+    background-color: #375F8D;
+    width: 50%;
+
+}
+
+.right_colom {
+    background-color: #41BAB3;
+    width: 50%;
+}
+
+.trird_slide_section {
+    width: 100%;
+    background-color: green;
+    margin-top: 20px;
+    position: relative;
+    overflow: hidden;
+}
+
+.square {
+    width: 100px;
+    height: 400px;
+    background-color: #FFC300;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    transform: rotate(-43deg);
+    position: absolute;
 }
