--- a/style.css
+++ b/style.css
@@ -29,6 +29,12 @@
 .nav-logo {
     width: 35px;
     height: 50px;
+    transition: transform 0.9s;
+
+}
+
+.nav-logo:hover {
+    transform: scale(1.2);
 }
 
 .navbar-togglers {
