add to chat boot

--- a/style.css
+++ b/style.css
@@ -53,7 +53,10 @@
 }
 
 .logo_body {
+    width: 170px;
+    height: 110px;
     border-right: solid 1px black;
+    box-sizing: block;
 }
 
 .nav-logo img {
@@ -127,7 +130,90 @@ h1 {
 
 
 
-@media only screen and (max-width:420px) {
+/*  chat style css hare  */
+
+.open-button {
+    background-color: #0f47bd;
+    color: white;
+    padding: 16px 16px;
+    border: none;
+    cursor: pointer;
+    position: fixed;
+    bottom: 5px;
+    right: 5px;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+}
+
+/* The popup chat - hidden by default */
+.chat-popup {
+    display: none;
+    position: fixed;
+    bottom: 5px;
+    right: 15px;
+    border: 3px solid #f1f1f1;
+    z-index: 9;
+}
+
+/* Add styles to the form container */
+.form-container {
+    max-width: 300px;
+    padding: 10px;
+    background-color: white;
+}
+
+.chat_heading {
+    font-weight: 500;
+}
+
+/* Full-width textarea */
+.form-container textarea {
+    width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    border: none;
+    background: #f1f1f1;
+    resize: none;
+    min-height: 200px;
+}
+
+/* When the textarea gets focus, do something */
+.form-container textarea:focus {
+    background-color: #ddd;
+    outline: none;
+}
+
+/* Set a style for the submit/send button */
+.form-container .btn {
+    background-color: #04AA6D;
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    margin-bottom: 10px;
+    opacity: 0.8;
+}
+
+/* Add a red background color to the cancel button */
+.form-container .cancel {
+    background-color: red;
+}
+
+/* Add some hover effects to buttons */
+.form-container .btn:hover,
+.open-button:hover {
+    opacity: 1;
+}
+
+
+
+
+
+
+
+@media only screen and (max-width:620px) {
     .nav-logo img {
         width: 100px;
         background-color: aqua;
@@ -138,5 +224,23 @@ h1 {
 
     .nav-logo:hover {
         transform: scale(1.2);
+    }
+
+    .logo_body {
+        width: 100%;
+    }
+
+
+    /* chat button  */
+
+    .open-button {
+
+        bottom: 220px;
+    }
+
+    .chat-popup {
+
+        bottom: 150px;
+
     }
 }
