--- a/style.css
+++ b/style.css
@@ -36,12 +36,14 @@
     transform: scale(1.2);
 }
 
-.navbar-togglers {
-    background-color: white;
-    border: none;
-    padding: 10px 16px;
-    outline: none;
+/* -----------------custom togglers css style-------------- */
+.custom-toggler.navbar-toggler {
+    border-color: yellow;
+    border-radius: 5px;
+}
 
+.custom-toggler .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 195, 3, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
 .navbar .icon_color {
@@ -231,16 +233,5 @@ h1 {
     }
 
 
-    /* chat button  */
 
-    .open-button {
-
-        bottom: 220px;
-    }
-
-    .chat-popup {
-
-        bottom: 150px;
-
-    }
 }
